[gd_scene load_steps=4 format=3 uid="uid://5aohpy4q2odu"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_4ct1r"]
[ext_resource type="PackedScene" uid="uid://co1lrggmahd1n" path="res://player/player.tscn" id="2_ogihm"]
[ext_resource type="AudioStream" uid="uid://whkqhwjb3f4b" path="res://sounds/explosion.wav" id="4_iubl7"]

[node name="Level" type="Node2D" groups=["game"]]
script = ExtResource("1_4ct1r")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[node name="Player" parent="." instance=ExtResource("2_ogihm")]
position = Vector2(943, 902)

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_iubl7")

[node name="BossDeadLabel" type="Label" parent="."]
visible = false
offset_left = 612.0
offset_top = 401.0
offset_right = 1314.0
offset_bottom = 606.0
theme_override_font_sizes/font_size = 150
text = "You  win :)"

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="Overlay" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="ButtonsContainer" type="VBoxContainer" parent="PauseMenu/Overlay"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
offset_right = -0.00012207
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 270)
theme_override_constants/separation = 100

[node name="ResumeButton" type="Button" parent="PauseMenu/Overlay/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Resume"

[node name="ResetButton" type="Button" parent="PauseMenu/Overlay/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Reset"

[node name="MainMenuButton" type="Button" parent="PauseMenu/Overlay/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Main menu"

[node name="QuitButton" type="Button" parent="PauseMenu/Overlay/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Quit"

[connection signal="pressed" from="PauseMenu/Overlay/ButtonsContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/Overlay/ButtonsContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PauseMenu/Overlay/ButtonsContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/Overlay/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
